ci/cd: переписал Dockerfile, оптимизация поднятия контейнеров