@@ -1,12 +1,12 @@
-FROM alpine:latest AS build
-RUN apk add gradle && apk add openjdk21
-COPY . .
-RUN gradle bootJar
-
-FROM alpine:latest AS result
-RUN apk add openjdk21
+FROM alpine:latest
+RUN apk add --no-cache openjdk21
 WORKDIR /app
-COPY --from=build /build/libs/*.jar app.jar
+COPY build/libs/app.jar app.jar
 
 EXPOSE 8070
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar","--add-opens=java.base/java.lang=ALL-UNNAMED", "app.jar"]
+
+# Теперь сервис не компилируется в контейнере
+# Перед тем как запустить docker-compose нужно выполнить таску ./gradlew bootJar
+# Затем, чтобы не пересобирать все образы, а только этот - docker-compose build user-service
+# Далее просто docker-compose up
